# GankenKun_webots

./: .gitignore  README.md  experiment.sh  experiment2.sh
controllers/GET_IMAGE/: GET_IMAGE.cpp
controllers/GankenKun_controller/: GankenKun_controller.cpp  GankenKun_controller.hpp
controllers/GankenKun_soccer/: GankenKun_soccer.py  left_kick.csv  play_motion.py  right_kick.csv
controllers/GankenKun_soccer/GankenKun/: foot_step_planner.py  walking.py
controllers/GankenKun_walking/: GankenKun_walking.py
controllers/GankenKun_walking/GankenKun/: kinematics.py  preview_control.py  walking.py
controllers/HCServer/: CMakeLists.txt  HCDelegate.ui  HCProxy.cpp  hajime_command.c
controllers/MotionEngine_server/: CMakeLists.txt  README.md  client_webots.hpp  cmake_command_win32.bat  main.cpp  message.proto  server.hpp
controllers/SAC_learning/: SAC_learning.py
controllers/agilerl_render/: agilerl_render.py
controllers/agilerl_render/soccer/: soccer.py
controllers/agilerl_train/: agilerl_train.py
controllers/agilerl_train/soccer/: matd3.py  soccer.py  utils.py
controllers/annotation_keypoints/: annotation.py  annotation_keypoints.py
controllers/auto_annotation/: auto_annotation.py
controllers/camera_setting/: Makefile  camera_setting.c
controllers/capture_image/: capture_image.py
controllers/check_motion/: check_motion.py
controllers/collect_images/: collect_images.py
controllers/generate_walking_pattern/: generate_walking_pattern.py
controllers/generate_walking_pattern/GankenKun/: foot_step_planner.py  walking.py
controllers/get_image_hr46_b3m/: CMakeLists.txt  Image_Writer.cpp  Image_Writer.hpp  OrientationEstimator.cpp  b3m.cpp  b3m.h  calc_mv.h  cmake_install.cmake  cntr.c  eeprom_list.txt  func.h  get_image_hr46_b3m  gyro.c  gyro.cpp  kine.h  main.cpp  main2.cpp  motion.c  motion.h  mvtbl.c  offset_angle.txt  pc_motion.h  servo_para.txt  sq_motion.c  sq_start.c  sq_start.h  sq_walk.c
controllers/get_position/: all_fomat.py  fomat.py  fomat_1.py  fomat_2.py  fomat_3.py  fomat_ball_1.py  get_position.py  txt_csv.py
controllers/hr46_b3m/: ADIS16375.h  CMakeLists.txt  acc.c  calc_deg.c  calc_deg.h  calc_mv.c  cntr.h  eeprom_list.txt  func.c  joy.h  main.cpp  mvtbl.h  pc_motion.cpp  serv.c  serv.h  serv_init.c  serv_init.h  servo_rs.c  servo_rs.h  sq_ready.h  sq_straight.c  sq_straight.h  var.h
controllers/hr46_b3m/HCServer/: CMakeLists.txt  HCDelegate.cpp  HCDelegate.h  HCDelegate.qrc.depends  HCIPC.cpp  HCIPC.h  HCProxy  HCServer  HCServer.cpp  HCServerDemoclient  HCServerDemoclient.cpp  KSerialPort.h  KTCPSocket.h  StringSender.ice  hajime_command.h  hcdelegate_main.cpp  moc_HCDelegate.cxx  moc_HCDelegate.cxx_parameters  ui_HCDelegate.h
controllers/hr46_b3m/RTIMULib/: CTestTestfile.cmake  Makefile
controllers/hr46_b3m/motions/: 003_hr42_stand_up_utsu.txt  004_hr42_stand_up_ao.txt  004_hr42_stand_up_ao.vm  005_hr42_keeper_center.txt  006_hr42_stand_up_left_side.txt  009_hr42_high_jump.txt  011_hr42_keeper_left.txt  030_hr42_kick_r.txt  030_hr42_kick_r.vm  031_hr42_kick_l.txt  032_hr42_kick_r_high.txt  033_hr42_kick_l_high.txt  035_hr42_goal_kick_l_kick.txt  035_hr42_goal_kick_l_kick.vm  040_hr42_takumi_kick.txt  040_hr42_takumi_kick.vm  041_hr42_oga_kick.txt  050_hr42_calibration.txt  051_hr42_goal_kick_l_iddling.txt
controllers/hr46_b3m/protobuf/: CMakeLists.txt  picture.pb.cc  picture.pb.h
controllers/hr46_b3m/protobufangles/: CMakeLists.txt  angles.proto
controllers/hr46_b3m/protobufpicture/: picture.proto
controllers/inv_pend_walk/: CMakeLists.txt  foot_step_planner.hpp  kinematics.hpp  main.cpp  show.plt
controllers/inv_pend_walk/capture_point/: CMakeLists.txt  main.cpp  plan_by_capture_point.hpp  show.plt  show2.plt
controllers/inv_pend_walk/test/: check_foot_step_planner.cpp
controllers/learning/: learning.py
controllers/learning_adjust_kick_motion/: falldown_kick.csv  learning_adjust_kick_motion.py  leg_up_motion.csv
controllers/learning_dribble/: learning_dribble.py
controllers/learning_kick/: falldown_kick.csv  learning_kick.py
controllers/learning_motion/: learning_motion.py
controllers/learning_walk/: learning_walk.py
controllers/marl/: marl.py  rllib.py
controllers/mat_rapid/: mat_rapid.py
controllers/mat_train/: config.py  mat_train.py  requirements.txt  transformer_1000.pt
controllers/multi_agent_env/: multi_agent_env.py
controllers/play_motion/: kick_motion.csv  kick_motion0.csv  kick_motion_cross.csv  play_motion.py  raise_foot.csv
controllers/ppo/: ppo.py  soccer_v0.py
controllers/referee/: cit_brains.json  game.json
controllers/test/: CMakeLists.txt  main.cpp
controllers/training_dribble/: training_dribble.py
controllers/walking/: walking.py
hr46_b3m/: CMakeLists.txt  OrientationEstimator.h  RTIMULib.ini  acc.h  gyro.h  joy.c  kine.c  main.cpp  servo_rs.c  sq_motion.h  sq_ready.c  sq_start.c  sq_walk.h  var_init.c
hr46_b3m/RTIMULib/: CMakeLists.txt  RTFusionRTQF.cpp
protos/: .Darwin-opHinge2Robocup.cache  .GankenKun.cache  .RoboCup_GankenKun.cache  .RobocupRobot.cache  .RobocupSoccerField.cache  GankenKun.proto  GankenKun_Keypoints.proto  GankenKun_box.proto  GankenKun_simple.proto  LatestModel.proto  RoboCup_GankenKun.proto  RobocupSoccerBall2.proto  RobocupSoccerField.proto  RobocupSoccerField2.proto  cit_brains.json  latest_model.proto  posture.json  team.json  test_camera.proto
remove_msgq/: CMakeLists.txt  remove_message_queue.cpp
worlds/: .robocup.wbproj  .robocup2021.wbproj  .soccer.wbproj  SAC_learning.wbt  SoccerRL.wbt  agilerl_render.wbt  agilerl_train.wbt  auto_annotation.wbt  check_motion.wbt  collect_images.wbt  collect_keypoints.wbt  get_3d_position.wbt  get_position.wbt  get_position_no_robot.wbt  get_position_test.wbt  kid.wbt  latest_model_walk.wbt  learning.wbt  learning_adjust_kick_motion.wbt  learning_dribble.wbt  learning_kick.wbt  learning_motion.wbt  learning_walk.wbt  marl.wbt  mat_rapid.wbt  mat_train.wbt  multi_agent_env.wbt  ppo.wbt  robocup.wbt  robocup2021.wbt  soccer.wbt  training_dribble.wbt  walking.wbt
(+42 files in other folders)
