cmake_minimum_required(VERSION 3.10)
project(inverted_pend)
find_package(Eigen3 REQUIRED)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/show.plt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(main main.cpp)
add_executable(check_plan test/check_foot_step_planner.cpp)
list(APPEND target_list main check_plan)

option(DEBUG_PLANNER "debug foot step planner" OFF )
target_compile_definitions(check_plan PUBLIC PLANNER_DEBUG)

foreach(target ${target_list})
    target_compile_options(${target} PRIVATE -Wall -Wpedantic -std=c++17)
    target_link_libraries(${target} Eigen3::Eigen m)
    target_compile_options(${target} PUBLIC -Wpedantic)
    target_include_directories(${target} PUBLIC ${EIGEN3_INCLUDE_DIRS})
    target_include_directories(${target} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
endforeach()
