cmake_minimum_required(VERSION 3.10)
project(inverted_pend)
if(DEFINED ENV{WEBOTS_HOME})
    set(WEBOTS_HOME $ENV{WEBOTS_HOME})
else()
    set(WEBOTS_HOME /usr/local/webots)
endif()
set(WEBOTS_LIBRARIES Controller CppController)
set(WEBOTS_LIBRARY_DIR ${WEBOTS_HOME}/lib/controller)
set(WEBOTS_INCLUDE_DIRS ${WEBOTS_HOME}/include/controller/c ${WEBOTS_HOME}/include/controller/cpp)
find_package(Eigen3 REQUIRED)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/show.plt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(main main.cpp)
add_executable(check_plan test/check_foot_step_planner.cpp)
add_executable(check_interface test/check_motor_interface.cpp)
list(APPEND target_list main check_plan check_interface)

option(DEBUG_PLANNER "debug foot step planner" OFF)
target_compile_definitions(check_plan PUBLIC PLANNER_DEBUG)

foreach(target ${target_list})
    target_compile_options(${target} PRIVATE -Wall -Wpedantic -std=c++17)
    target_link_directories(${target} PUBLIC ${WEBOTS_LIBRARY_DIR})
    target_link_libraries(${target} Eigen3::Eigen m ${WEBOTS_LIBRARIES})
    target_compile_options(${target} PUBLIC -Wpedantic)
    target_include_directories(${target} PUBLIC ${EIGEN3_INCLUDE_DIRS} ${WEBOTS_INCLUDE_DIRS})
    target_include_directories(${target} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
endforeach()
